--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,7 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           channel: "stable"
+      - run: cd app/
       - run: flutter pub get
       - run: flutter build apk
       - uses: actions/upload-artifact@v1
