--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,14 +17,15 @@ jobs:
           distribution: "zulu"
           java-version: "11"
       - name: Decode google-services.json
+        working-directory: ./app
         env: 
             GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
-        run: echo "$GOOGLE_SERVICES_JSON" > app/android/app/google-services.json
+        run: echo "$GOOGLE_SERVICES_JSON" > android/app/google-services.json
       - name: Decode firebase_option
         working-directory: ./app
         env:
           firebase_options_dart: ${{secrets.FIREBASE_OPTION}}
-        run : echo "$firebase_options_dart" > app/lib/firebase_options.dart
+        run : echo "$firebase_options_dart" > lib/firebase_options.dart
 
       - uses: subosito/flutter-action@v2
         with:
