--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           channel: "stable"
+          working-directory: ./app
       - run: flutter pub get
       - run: flutter build apk
       - uses: actions/upload-artifact@v1
