--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory: ./app
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v2
@@ -17,12 +19,10 @@ jobs:
           distribution: "zulu"
           java-version: "11"
       - name: Decode google-services.json
-        working-directory: ./app
         env: 
             GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
         run: echo "$GOOGLE_SERVICES_JSON" > android/app/google-services.json
       - name: Decode firebase_option
-        working-directory: ./app
         env:
           firebase_options_dart: ${{secrets.FIREBASE_OPTION}}
         run : echo "$firebase_options_dart" > lib/firebase_options.dart
@@ -30,7 +30,6 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           channel: "stable"
-          working-directory: ./app
       - run: flutter pub get
       - run: flutter build apk
       - uses: actions/upload-artifact@v1
