--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -37,7 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core:
   firebase_auth:
-  
+  google_nav_bar: ^5.0.6  
+ 
 dev_dependencies:
   flutter_test:
     sdk: flutter
