--- a/app/android/app/build.gradle
+++ b/app/android/app/build.gradle
@@ -70,5 +70,6 @@ flutter {
 }
 
 dependencies {
+    implementation platform('com.google.firebase:firebase-bom:28.4.0')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
