--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core:
+  firebase_core: ^2.7.0
   firebase_auth:
   google_nav_bar: ^5.0.6  
  
