lisätty yhteis databaseen ja luotu malli ja funktio uuden menemisen lisäämisen databaseen

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^2.7.0
   firebase_auth:
   google_nav_bar: ^5.0.6  
+  firebase_database: ^10.0.15
  
 dev_dependencies:
   flutter_test:
