--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -64,6 +64,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+    # Add your assets here
+  assets:
+    - assets/
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
